<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/setting_menu"
        android:title="@string/setting"
        android:icon = "@drawable/ic_baseline_settings_24"
        app:showAsAction="always" />
</menu>